@@ -10,18 +10,11 @@ var truncate = require('unicode-byte-truncate')
 const REDACTED = require('./constants').REDACTED
 var logging = require('./logging')
 var version = require('../package').version
-var packageName = require('../package').name
 
 const { WildcardMatcher } = require('./wildcard-matcher')
 const { CloudMetadata } = require('./cloud-metadata')
 const { NoopTransport } = require('./noop-transport')
 const { isLambdaExecutionEnviornment } = require('./lambda')
-
-// Standardize user-agent header. Only use "elasticapm-node" if it matches "elastic-apm-node".
-if (packageName === 'elastic-apm-node') {
-  packageName = 'elasticapm-node'
-}
-var userAgent = `${packageName}/${version}`
 
 let confFile = loadConfigFile()
 
@@ -701,6 +694,45 @@ function loadServerCaCertFile (opts) {
   }
 }
 
+// Return the User-Agent string the agent will use for its comms to APM Server.
+//
+// Per https://github.com/elastic/apm/blob/master/specs/agents/transport.md#user-agent
+// the pattern is roughly this:
+//    $repoName/$version ($serviceName $serviceVersion)
+//
+// The format of User-Agent is governed by https://datatracker.ietf.org/doc/html/rfc7231.
+//    User-Agent = product *( RWS ( product / comment ) )
+// We do not expect `$repoName` and `$version` to have surprise/invalid values.
+// However, `$serviceName` and `$serviceVersion` are provided by the user
+// and could have invalid characters. `comment` is defined by
+// https://datatracker.ietf.org/doc/html/rfc7230#section-3.2.6 as:
+//    comment        = "(" *( ctext / quoted-pair / comment ) ")"
+//    obs-text       = %x80-FF
+//    ctext          = HTAB / SP / %x21-27 / %x2A-5B / %x5D-7E / obs-text
+//    quoted-pair    = "\" ( HTAB / SP / VCHAR / obs-text )
+// `commentBadChar` below *approximates* these rules, and is used to replace
+// invalid characters with '_' in the generated User-Agent string.  This
+// replacement isn't part of the APM spec.
+function userAgentFromConf (conf) {
+  let userAgent = `apm-agent-nodejs/${version}`
+
+  // This regex *approximately* matches the allowed syntax for a "comment".
+  // It does not handle "quoted-pair" or a "comment" in a comment.
+  const commentBadChar = /[^\t \x21-\x27\x2a-\x5b\x5d-\x7e\x80-\xff]/g
+  const commentParts = []
+  if (conf.serviceName) {
+    commentParts.push(conf.serviceName.replace(commentBadChar, '_'))
+  }
+  if (conf.serviceVersion) {
+    commentParts.push(conf.serviceVersion.replace(commentBadChar, '_'))
+  }
+  if (commentParts.length > 0) {
+    userAgent += ` (${commentParts.join(' ')})`
+  }
+
+  return userAgent
+}
+
 function getBaseClientConfig (conf, agent) {
   let clientLogger = null
   if (!logging.isLoggerCustom(agent.logger)) {
@@ -733,7 +765,7 @@ function getBaseClientConfig (conf, agent) {
     // HTTP conf
     secretToken: conf.secretToken,
     apiKey: conf.apiKey,
-    userAgent: userAgent,
+    userAgent: userAgentFromConf(conf),
     serverUrl: conf.serverUrl,
     serverCaCert: loadServerCaCertFile(conf),
     rejectUnauthorized: conf.verifyServerCert,
@@ -781,3 +813,4 @@ module.exports.CAPTURE_ERROR_LOG_STACK_TRACES_ALWAYS = CAPTURE_ERROR_LOG_STACK_T
 // The following are exported for tests.
 module.exports.DEFAULTS = DEFAULTS
 module.exports.secondsFromTimeStr = secondsFromTimeStr
+module.exports.userAgentFromConf = userAgentFromConf
